Bug 1674204 - Fix hyphenated text min-content size. r=jfkthame

Differential Revision: https://phabricator.services.mozilla.com/D128105